<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.we.wemvp.login.ui.fragments.LoginFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/primaryLightColor"
        android:id="@+id/mainContainer"
        tools:context="com.we.wemvp.login.ui.fragments.LoginFr">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_welcome"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:layout_marginBottom="40dp"
                android:id="@+id/message_login"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message.signup"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:id="@+id/message_signup"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:textColor="@color/primaryTextColor"
                android:text="@string/login_credentials_not_valid"
                android:id="@+id/error_text"

                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primaryColor"

                >


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_name"
                    android:visibility="gone"
                    android:imeActionId="@+id/login"
                    android:textSize="16sp"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/primaryDarkColor"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primaryColor">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_surname"
                    android:visibility="gone"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/next"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/primaryDarkColor"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primaryColor">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_age"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/next"
                    android:visibility="gone"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/primaryDarkColor"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <com.we.wemvp.helper.MaterialSpinner
                android:id="@+id/signup_country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:prompt="@string/next"
                android:visibility="gone"
                android:layout_marginStart="2dp"
                android:popupBackground="@color/primaryLightColor"
                app:ms_hintTextSize="16dp"
                app:ms_arrowColor="@color/primaryDarkColor"
                app:ms_baseColor="@color/primaryDarkColor"
                app:ms_hintColor="@color/primaryDarkColor"
                app:ms_floatingLabelColor="@color/secondaryColor"
                app:ms_highlightColor="@color/primaryDarkColor"
                >

            </com.we.wemvp.helper.MaterialSpinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primaryColor">


                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColor="@color/primaryTextColor"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp"
                    android:textColorHint="@color/primaryDarkColor"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/primaryColor">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:textColor="@color/primaryTextColor"
                    android:textColorHint="@color/primaryDarkColor"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>




        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/email_login_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="bottom"
        android:textColor="@android:color/white"
        android:text="@string/action_log_in"
        android:background="@color/primaryColor"
        android:textStyle="bold" />

    <Button
        android:id="@+id/email_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="bottom"
        android:textColor="@android:color/white"
        android:text="@string/action_sign_in"
        android:background="@color/primaryColor"
        android:visibility="gone"
        android:textStyle="bold" />
</FrameLayout>
